002: updates to copy, style changes, add pointer button and favicon

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Brad Spudich" />
     <meta property="og:title" content=">Brad Spudich" />
-    <link rel="icon" type="image/ico" href="http://donetodeathprojects.com/favicon.ico">
+    <link rel="icon" type="image/ico" href=favicon.ico>
     <link rel="stylesheet" href=style.css />
 </head>
 
@@ -34,7 +34,7 @@
 </body>
     
 <script>
-    var words = ["Writer", "Photographer", "Content Specialist", "Storyteller"];
+    var words = ["Writer", "Photographer", "Storyteller"];
     var i = 0;
     var text = "This text changes";
 
