003: add clip links, update meta

--- a/info.html
+++ b/info.html
@@ -9,7 +9,7 @@
     <title>Brad Spudich</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Brad Spudich" />
-    <meta property="og:title" content=">Brad Spudich" />
+    <meta property="og:title" content="Brad Spudich" />
     <link rel="icon" type="image/ico" href=favicon.ico>
     <link rel="stylesheet" href=style.css />
 </head>
@@ -25,11 +25,12 @@
         </p>
         <br>
         <h2>Skills</h2>
-        <p>Strategy / Writing / Photo / Research / PR / Social / SEO / Web Content / Creative Direction / Set Assisting / ETC</p>
+        <p>Strategy / <a href="https://www.bspudich.com/writing" target="_blank">Writing</a> / <a href="https://www.bspudich.com/miscellaneous-personal/8sjcqr27lfd14ku8wtc4t0ioapck36" target="_blank">Photo</a> / Research / PR / Social / SEO / Web Content / Creative Direction / Set Assisting / ETC</p>
         <br>
         <h2>Contact</h2>
         <p>bradspudich (at) gmail (dot) com <br>
-            CV and clips upon request</p>
+            CV available upon request <br>
+            </p>
     </div>
 
     <div class="footer">
