--- a/into.html
+++ b/into.html
@@ -9,7 +9,7 @@
     <title>Brad Spudich</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Brad Spudich" />
-    <meta property="og:title" content=">Brad Spudich" />
+    <meta property="og:title" content="Brad Spudich" />
     <link rel="icon" type="image/ico" href=favicon.ico>
     <link rel="stylesheet" href=style.css />
 </head>
